# wetdet

./: README.md
firmware/: Cargo.toml  build.sh  clean.sh  flash.sh  partitions_custom.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/logentry/: Cargo.toml
firmware/logentry/src/: lib.rs
firmware/main/: Cargo.toml  build.rs
firmware/main/src/: alarm.rs  config.rs  envsensor.rs  main.rs  measlog.rs  statemachine.rs  util.rs
firmware/sdlog/: Cargo.toml
firmware/sdlog/src/: lib.rs
firmware/src/: alarm.rs  config.rs  envsensor.rs  errordeb.rs  esp_idf.rs  main.rs  statemachine.rs  util.rs
sddump/: Cargo.toml
sddump/src/: main.rs
