# -*- coding: utf-8 -*-

[workspace]
members = [
    "main",
    "sdlog",
]
resolver = "3"

[profile.release]                                                                                       
lto = "fat"
opt-level = "s"
panic = "abort"
codegen-units   = 1

#[patch.crates-io]
#timeslice = { git = "https://github.com/mbuesch/timeslicers.git", branch = "master" }
#timeslice = { path = "../../timeslicers" }

# vim: ts=4 sw=4 expandtab
