# -*- coding: utf-8 -*-

[package]
name = "main"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
#dummy-esp-idf-hal = { path = "../mock/dummy-esp-idf-hal", optional = true }
#dummy-esp-idf-svc = { path = "../mock/dummy-esp-idf-svc", optional = true }
#dummy-esp-idf-sys = { path = "../mock/dummy-esp-idf-sys", optional = true }
bme280-multibus = "0.5"
embedded-hal = "1"
embedded-sdmmc = "0.9"
esp-idf-hal = { version = "0.46", optional = true }
esp-idf-svc = { version = "0.52", optional = true }
esp-idf-sys = { version = "0.37", features = ["binstart"], optional = true }
heapless = "0.9"
timeslice = { version = "0.7", features = [ "meas" ] }

sdlog = { path = "../sdlog", features = [ "debug" ] }
logentry = { path = "../logentry" }

[features]
default = [ "hw" ]
hw = [ "dep:esp-idf-hal", "dep:esp-idf-sys", "dep:esp-idf-svc", "timeslice/hal-espidf" ]
#sim = [ "dep:dummy-esp-idf-hal", "dep:dummy-esp-idf-sys", "dep:dummy-esp-idf-svc", "timeslice/hal-dummy" ]

[build-dependencies]
embuild = "0.33"

# vim: ts=4 sw=4 expandtab
